# example-pyinstaller

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: build.yaml  test.yaml
scripts/: .envrc.template  clean.sh  pyinstaller.sh  quality.sh
src/example_pyinstaller/: __init__.py  main.py  types.py  util.py
src/example_pyinstaller/examples/: __init__.py  asset_io.py  example.py  sqlite_io.py  tmpdir_io.py  userdir_io.py
tests/: example_test.py
