[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "example-pyinstaller"
version = "0.1.0"
description = "A PyInstaller example harness for testing runtime behavior"
authors = ["Kelly Sizer <kelly@sizerllc.com>"]
readme = "README.md"
license = "MIT"  # or your chosen license
repository = "https://github.com/sksizer/example-pyinstaller"
documentation = "https://github.com/sksizer/example-pyinstaller"
keywords = ["pyinstaller", "testing", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.14"
colorama = ">=0.4.6"
pyinstaller = "^6.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
black = "^23.0"
mypy = "^1.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
example-pyinstaller = "example_pyinstaller.main:main"

# Tool configurations
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests"
]
python_files = [
    "src/**/*_test.py",  # Only files ending in _test.py in src directory
    "tests/*.py",
    "tests/**/*.py"      # All .py files in tests directory
]


